Fix colors in dark mode

--- a/src/app/layout/user-profile/user-profile.component.scss
+++ b/src/app/layout/user-profile/user-profile.component.scss
@@ -3,7 +3,7 @@
   height: 32px;
   width: 32px;
   background-color: var(--mat-sys-primary);
-  color: white;
+  color: var(--mat-sys-on-primary);
   display: flex;
   align-items: center;
   justify-content: center;
